textarea underline should be further down to prevent overlap

--- a/textarea/index.styl
+++ b/textarea/index.styl
@@ -34,7 +34,6 @@ json('../colors.json')
 
   > .underline
     position: absolute
-    bottom: 8px
     height: 1px
     width: 100%
     background: $grey600
